# fixed-wing-uav-gnc

./: .gitignore  README.md  pyproject.toml  requirements.txt
apps/: controller_comparison_dashboard.py  ekf_navigation_dashboard.py  gnc_dashboard.py
configs/: uav_longitudinal.json
digital_thread/: 00_project_charter.md  01_requirements.md  02_assumptions.md  03_interface_control_document.md  04_test_plan.md  05_verification_matrix.csv
docs/: longitudinal_model_notes.md
notebooks/: README.md
outputs/logs/: state_space_matrices_v0_3.npz
scripts/: run_ekf_navigation_demo.py  run_estimator_in_loop_demo.py  run_linearization_demo.py  run_longitudinal_animation_demo.py  run_longitudinal_demo.py  run_lqr_closed_loop_demo.py  run_lqr_design_demo.py  run_modal_analysis_demo.py  run_pid_lqr_comparison_demo.py  run_trim_demo.py
src/fixed_wing_uav_gnc.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/gnc_sim/: __init__.py  config.py
src/gnc_sim/analysis/: __init__.py  controller_comparison.py  modal_analysis.py
src/gnc_sim/controllers/: __init__.py  autopilot_longitudinal.py  lqr.py  pid.py
src/gnc_sim/environment/: __init__.py  wind.py
src/gnc_sim/linearization/: __init__.py  finite_difference.py
src/gnc_sim/models/: __init__.py  uav_longitudinal.py
src/gnc_sim/navigation/: __init__.py  ekf.py
src/gnc_sim/sensors/: __init__.py  measurements.py
tests/: test_config.py  test_controller_comparison.py  test_ekf_navigation.py  test_estimator_in_loop.py  test_lqr.py  test_lqr_closed_loop.py  test_modal_analysis.py  test_pid.py  test_trim.py
(+10 files in other folders)
